# relativistic_gravity_simulator

./: .gitignore  CMakeLists.txt
include/: physics.hpp  renderer.hpp
